--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^7.30.0",
     "jest": "^27.0.6",
     "metro-react-native-babel-preset": "^0.66.1",
+    "prettier": "^2.3.2",
     "react-test-renderer": "17.0.1"
   },
   "jest": {
