--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@babel/core": "^7.14.6",
     "@babel/runtime": "^7.14.6",
     "@react-native-community/eslint-config": "^3.0.0",
+    "@testing-library/jest-native": "^4.0.1",
+    "@testing-library/react-native": "^7.2.0",
     "babel-jest": "^27.0.6",
     "eslint": "^7.30.0",
     "jest": "^27.0.6",
     "metro-react-native-babel-preset": "^0.66.1",
     "prettier": "^2.3.2",
-    "react-test-renderer": "17.0.1"
+    "react-test-renderer": "17.0.1",
+    "redux-mock-store": "^1.5.4",
+    "redux-mock-store-await-actions": "^2.1.0"
   },
   "jest": {
     "preset": "react-native"
